# commercial_etl_pipeline

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/commercial_etl_pipeline/: db_credentials.py
src/db_application/: db_connection.py  load_data.py  tbl_architecture.py
