[project]
name = "commercial-etl-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Tulio Tome",email = "tuliotdct@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "boto3 (>=1.38.36,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]

[tool.poetry]
packages = [{include = "commercial_etl_pipeline", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
